Add packaging plugin + increase memory cap